improve result screen, add about page

--- a/site/en-county.html
+++ b/site/en-county.html
@@ -7,8 +7,9 @@
   <div class="header">
     <h1>County elections</h1>
     <div class="links">
-      <a href="en-municipal.html">MUNICIPAL ELECTIONS</a>
-      <a href="fi-county.html">FI</a>
+      <a href="en-municipal.html">Municipal</a>
+      <a href="fi-county.html">Lang</a>
+      <a href="en-about.html">About</a>
     </div>
   </div>
   <p>In my wellbeing services county, I should be able to get non-urgent treatment in primary health care within two weeks.</p>
@@ -261,6 +262,6 @@
   <input type="radio" id="q24a3" name="q24" value="3">
   <label for="q24a3">Completely agree</label><br>
 
-  <a class="button" href="" onclick="submit(COUNTY)">Proceed to the results</a>
+  <a class="button" href="#" onclick="submit(COUNTY)">Proceed to the results</a>
   <script src="script.js"></script>
 </body>
