--- a/site/en-municipal.html
+++ b/site/en-municipal.html
@@ -7,8 +7,9 @@
   <div class="header">
     <h1>Municipal elections</h1>
     <div class="links">
-      <a href="en-county.html">COUNTY ELECTIONS</a>
-      <a href="fi-municipal.html">FI</a>
+      <a href="en-county.html">County</a>
+      <a href="fi-municipal.html">Lang</a>
+      <a href="en-about.html">About</a>
     </div>
   </div>
   <p>My municipality should set a maximum size for elementary school teaching groups.</p>
@@ -261,6 +262,6 @@
   <input type="radio" id="q24a3" name="q24" value="3">
   <label for="q24a3">Completely agree</label><br>
 
-  <a class="button" href="" onclick="submit(MUNICIPAL)">Proceed to the results</a>
+  <a class="button" href="#" onclick="submit(MUNICIPAL)">Proceed to the results</a>
   <script src="script.js"></script>
 </body>
