--- a/site/fi-county.html
+++ b/site/fi-county.html
@@ -7,8 +7,9 @@
   <div class="header">
     <h1>Aluevaalit</h1>
     <div class="links">
-      <a href="fi-municipal.html">KUNTAVAALIT</a>
-      <a href="en-county.html">EN</a>
+      <a href="fi-municipal.html">Kuntavaalit</a>
+      <a href="en-county.html">Kieli</a>
+      <a href="fi-about.html">About</a>
     </div>
   </div>
   <p>Hyvinvointialueellani pitää päästä kiireettömään hoitoon perusterveydenhuollossa kahdessa viikossa.</p>
@@ -261,6 +262,6 @@
   <input type="radio" id="q24a3" name="q24" value="3">
   <label for="q24a3">Täysin samaa mieltä</label><br>
 
-  <a class="button" href="" onclick="submit(COUNTY)">Jatka tuloksiin</a>
+  <a class="button" href="#" onclick="submit(COUNTY)">Jatka tuloksiin</a>
   <script src="script.js"></script>
 </body>
