--- a/site/fi-municipal.html
+++ b/site/fi-municipal.html
@@ -7,8 +7,9 @@
   <div class="header">
     <h1>Kuntavaalit</h1>
     <div class="links">
-      <a href="fi-county.html">ALUEVAALIT</a>
-      <a href="en-municipal.html">EN</a>
+      <a href="fi-county.html">Aluevaalit</a>
+      <a href="en-municipal.html">Kieli</a>
+      <a href="fi-about.html">About</a>
     </div>
   </div>
   <p>Kuntani tulisi asettaa yläraja peruskoulun opetusryhmien koolle.</p>
@@ -261,6 +262,6 @@
   <input type="radio" id="q24a3" name="q24" value="3">
   <label for="q24a3">Täysin samaa mieltä</label><br>
 
-  <a class="button" href="" onclick="submit(MUNICIPAL)">Jatka tuloksiin</a>
+  <a class="button" href="#" onclick="submit(MUNICIPAL)">Jatka tuloksiin</a>
   <script src="script.js"></script>
 </body>
