automatically generate averages with python

--- a/site/fi-county.html
+++ b/site/fi-county.html
@@ -265,4 +265,5 @@
 
   <a class="button" href="#" onclick="submit(COUNTY)">Jatka tuloksiin</a>
   <script src="script.js"></script>
+  <script src="averages.js"></script>
 </body>
